[package]
name = "pthread-3ds"
authors = [ "Rust3DS Org", "Andrea Ciliberti <meziu210@icloud.com>" ]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
libc = "0.2.116"
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
spin = { version = "0.9", default-features = false, features = ["rwlock", "std"] }
static_assertions = "1.0"
